load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["finder.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/wspace",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["finder_test.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/wspace",
    library = ":go_default_library",
)
