load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "autogazelle.go",
        "client_unix.go",
        "server_unix.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/cmd/autogazelle",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android_386": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_amd64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_arm": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android_arm64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_386": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly_amd64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_386": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_amd64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_arm": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd_arm64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios_386": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios_amd64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios_arm": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios_arm64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:js_wasm": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_386": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mips64le": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_mipsle": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_ppc64le": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_riscv64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux_s390x": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl_386": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl_amd64p32": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl_arm": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_386": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_amd64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_arm": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd_arm64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_386": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_amd64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_arm": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd_arm64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris_amd64": [
            "@com_github_fsnotify_fsnotify//:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "autogazelle",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "README.rst",
        "autogazelle.bash",
        "autogazelle.go",
        "client_unix.go",
        "server_unix.go",
    ],
    visibility = ["//visibility:public"],
)
