load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "autogazelle_lib",
    srcs = [
        "autogazelle.go",
        "client_unix.go",
        "server_unix.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/cmd/autogazelle",
    visibility = ["//visibility:private"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//config",
            "//language/go",
            "//language/proto",
            "//resolve",
            "//rule",
            "//walk",
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//config",
            "//language/go",
            "//language/proto",
            "//resolve",
            "//rule",
            "//walk",
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//config",
            "//language/go",
            "//language/proto",
            "//resolve",
            "//rule",
            "//walk",
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//config",
            "//language/go",
            "//language/proto",
            "//resolve",
            "//rule",
            "//walk",
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//config",
            "//language/go",
            "//language/proto",
            "//resolve",
            "//rule",
            "//walk",
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//config",
            "//language/go",
            "//language/proto",
            "//resolve",
            "//rule",
            "//walk",
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//config",
            "//language/go",
            "//language/proto",
            "//resolve",
            "//rule",
            "//walk",
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//config",
            "//language/go",
            "//language/proto",
            "//resolve",
            "//rule",
            "//walk",
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//config",
            "//language/go",
            "//language/proto",
            "//resolve",
            "//rule",
            "//walk",
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//config",
            "//language/go",
            "//language/proto",
            "//resolve",
            "//rule",
            "//walk",
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "autogazelle",
    embed = [":autogazelle_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "README.rst",
        "autogazelle",
        "autogazelle.bash",
        "autogazelle.go",
        "client_unix.go",
        "server_unix.go",
    ],
    visibility = ["//visibility:public"],
)
