load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle_binary")

gazelle_binary(
    name = "gazelle",
    languages = DEFAULT_LANGUAGES,
    msan = "off",
    pure = "off",
    race = "off",
    static = "off",
    visibility = ["//visibility:public"],
)

gazelle_binary(
    name = "gazelle_pure",
    languages = DEFAULT_LANGUAGES,
    msan = "off",
    pure = "on",
    race = "off",
    static = "off",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    # keep
    srcs = [
        "diff.go",
        "fix.go",
        "fix-update.go",
        "gazelle.go",
        "metaresolver.go",
        "print.go",
        "update-repos.go",
        "version.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/cmd/gazelle",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//flag:go_default_library",
        "//internal/version:go_default_library",
        "//label:go_default_library",
        "//language:go_default_library",
        "//language/go:go_default_library",
        "//language/proto:go_default_library",
        "//merger:go_default_library",
        "//repo:go_default_library",
        "//resolve:go_default_library",
        "//rule:go_default_library",
        "//vendor/github.com/pmezard/go-difflib/difflib:go_default_library",
        "//walk:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "diff_test.go",
        "fix_test.go",
        "integration_test.go",
        "langs.go",  # keep
        "update_repos_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//config:go_default_library",
        "//internal/wspace:go_default_library",
        "//rule:go_default_library",
        "//testtools:go_default_library",
        "//vendor/github.com/bazelbuild/buildtools/build:go_default_library",
    ],
)
