load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:def.bzl", "DEFAULT_LANGUAGES", "gazelle_binary")

gazelle_binary(
    name = "gazelle",
    languages = DEFAULT_LANGUAGES,
    visibility = ["//visibility:public"],
)

go_library(
    name = "gazelle_lib",
    # keep
    srcs = ["gazelle.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/cmd/gazelle",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//language",
        "//language/go",
        "//language/proto",
        "//runner",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "gazelle.go",
        "langs.go",
    ],
    visibility = ["//visibility:public"],
)
