load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "generate_repo_config_lib",
    srcs = ["generate_repo_config.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/cmd/generate_repo_config",
    visibility = ["//visibility:private"],
    deps = [
        "//repo",
        "//rule",
    ],
)

go_binary(
    name = "generate_repo_config",
    embed = [":generate_repo_config_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "generate_repo_config_test",
    srcs = ["generate_repo_config_test.go"],
    embed = [":generate_repo_config_lib"],
    deps = ["//testtools"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "generate_repo_config.go",
        "generate_repo_config_test.go",
    ],
    visibility = ["//visibility:public"],
)
